HelloUltraviolet/Fixtures/RejectedSource/Expressions/CallNonFunction/Source/Main.uv
//! Rejected expression specimen for calling a non-function value.

public procedure callNonFunctionReference() -> i32 {
    let value: i32 = 3
    return value()
}
